syntax = "proto3";

package com.wazuh.test.generic_request;

/*
 * This API is used for the component tests of httpsrv module
 */

/***************************************************
 * Test generic request
 **************************************************/
message Generic_Request
{
    optional string content = 1; // Test message string
}

// message Generic_Request -> Return a GenericStatus_Response
